// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Booking rate component should renders correctly - rate 0 1`] = `
<div
  className="booking-rate"
>
  <div
    className="booking-rate__star "
  />
  <div
    className="booking-rate__star "
  />
  <div
    className="booking-rate__star "
  />
  <div
    className="booking-rate__star "
  />
  <div
    className="booking-rate__star "
  />
  <div
    className="booking-rate__star "
  />
  <div
    className="booking-rate__star "
  />
  <div
    className="booking-rate__star "
  />
  <div
    className="booking-rate__star "
  />
  <div
    className="booking-rate__star "
  />
  <div
    className="booking-rate__votes"
  >
    0
  </div>
</div>
`;

exports[`Booking rate component should renders correctly - rate 1 1`] = `
<div
  className="booking-rate"
>
  <div
    className="booking-rate__star booking-rate__star--fill"
  />
  <div
    className="booking-rate__star booking-rate__star--fill"
  />
  <div
    className="booking-rate__star "
  />
  <div
    className="booking-rate__star "
  />
  <div
    className="booking-rate__star "
  />
  <div
    className="booking-rate__star "
  />
  <div
    className="booking-rate__star "
  />
  <div
    className="booking-rate__star "
  />
  <div
    className="booking-rate__star "
  />
  <div
    className="booking-rate__star "
  />
  <div
    className="booking-rate__votes"
  >
    20
  </div>
</div>
`;

exports[`Booking rate component should renders correctly - rate 1.5 1`] = `
<div
  className="booking-rate"
>
  <div
    className="booking-rate__star booking-rate__star--fill"
  />
  <div
    className="booking-rate__star booking-rate__star--fill"
  />
  <div
    className="booking-rate__star booking-rate__star--fill"
  />
  <div
    className="booking-rate__star "
  />
  <div
    className="booking-rate__star "
  />
  <div
    className="booking-rate__star "
  />
  <div
    className="booking-rate__star "
  />
  <div
    className="booking-rate__star "
  />
  <div
    className="booking-rate__star "
  />
  <div
    className="booking-rate__star "
  />
  <div
    className="booking-rate__votes"
  >
    25
  </div>
</div>
`;

exports[`Booking rate component should renders correctly - rate 2 1`] = `
<div
  className="booking-rate"
>
  <div
    className="booking-rate__star booking-rate__star--fill"
  />
  <div
    className="booking-rate__star booking-rate__star--fill"
  />
  <div
    className="booking-rate__star booking-rate__star--fill"
  />
  <div
    className="booking-rate__star booking-rate__star--fill"
  />
  <div
    className="booking-rate__star "
  />
  <div
    className="booking-rate__star "
  />
  <div
    className="booking-rate__star "
  />
  <div
    className="booking-rate__star "
  />
  <div
    className="booking-rate__star "
  />
  <div
    className="booking-rate__star "
  />
  <div
    className="booking-rate__votes"
  >
    50
  </div>
</div>
`;

exports[`Booking rate component should renders correctly - rate 4.5 1`] = `
<div
  className="booking-rate"
>
  <div
    className="booking-rate__star booking-rate__star--fill"
  />
  <div
    className="booking-rate__star booking-rate__star--fill"
  />
  <div
    className="booking-rate__star booking-rate__star--fill"
  />
  <div
    className="booking-rate__star booking-rate__star--fill"
  />
  <div
    className="booking-rate__star booking-rate__star--fill"
  />
  <div
    className="booking-rate__star booking-rate__star--fill"
  />
  <div
    className="booking-rate__star booking-rate__star--fill"
  />
  <div
    className="booking-rate__star booking-rate__star--fill"
  />
  <div
    className="booking-rate__star booking-rate__star--fill"
  />
  <div
    className="booking-rate__star "
  />
  <div
    className="booking-rate__votes"
  >
    50
  </div>
</div>
`;

exports[`Booking rate component should renders correctly - rate 4.33 1`] = `
<div
  className="booking-rate"
>
  <div
    className="booking-rate__star booking-rate__star--fill"
  />
  <div
    className="booking-rate__star booking-rate__star--fill"
  />
  <div
    className="booking-rate__star booking-rate__star--fill"
  />
  <div
    className="booking-rate__star booking-rate__star--fill"
  />
  <div
    className="booking-rate__star booking-rate__star--fill"
  />
  <div
    className="booking-rate__star booking-rate__star--fill"
  />
  <div
    className="booking-rate__star booking-rate__star--fill"
  />
  <div
    className="booking-rate__star booking-rate__star--fill"
  />
  <div
    className="booking-rate__star booking-rate__star--fill"
  />
  <div
    className="booking-rate__star "
  />
  <div
    className="booking-rate__votes"
  >
    50
  </div>
</div>
`;

exports[`Booking rate component should renders correctly - rate 5, all stars are filled 1`] = `
<div
  className="booking-rate"
>
  <div
    className="booking-rate__star booking-rate__star--fill"
  />
  <div
    className="booking-rate__star booking-rate__star--fill"
  />
  <div
    className="booking-rate__star booking-rate__star--fill"
  />
  <div
    className="booking-rate__star booking-rate__star--fill"
  />
  <div
    className="booking-rate__star booking-rate__star--fill"
  />
  <div
    className="booking-rate__star booking-rate__star--fill"
  />
  <div
    className="booking-rate__star booking-rate__star--fill"
  />
  <div
    className="booking-rate__star booking-rate__star--fill"
  />
  <div
    className="booking-rate__star booking-rate__star--fill"
  />
  <div
    className="booking-rate__star booking-rate__star--fill"
  />
  <div
    className="booking-rate__votes"
  >
    50
  </div>
</div>
`;

exports[`Booking rate component should renders correctly with default props 1`] = `
<div
  className="booking-rate"
>
  <div
    className="booking-rate__star "
  />
  <div
    className="booking-rate__star "
  />
  <div
    className="booking-rate__star "
  />
  <div
    className="booking-rate__star "
  />
  <div
    className="booking-rate__star "
  />
  <div
    className="booking-rate__star "
  />
  <div
    className="booking-rate__star "
  />
  <div
    className="booking-rate__star "
  />
  <div
    className="booking-rate__star "
  />
  <div
    className="booking-rate__star "
  />
  <div
    className="booking-rate__votes"
  >
    0
  </div>
</div>
`;
